--- a/RoboFlasher/packages.config
+++ b/RoboFlasher/packages.config
@@ -5,7 +5,7 @@
   <package id="MetroModernUI" version="1.4.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net461" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="3.0.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="3.1.0" targetFramework="net461" />
   <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.6.0" targetFramework="net461" />
   <package id="Microsoft.IdentityModel.Logging" version="5.6.0" targetFramework="net461" />
   <package id="Microsoft.IdentityModel.Tokens" version="5.6.0" targetFramework="net461" />
@@ -14,6 +14,10 @@
   <package id="SharpZipLib" version="1.2.0" targetFramework="net461" />
   <package id="SSH.NET" version="2016.1.0" targetFramework="net461" />
   <package id="SshKeyGenerator" version="1.1.31" targetFramework="net461" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net461" />
   <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net461" />
   <package id="System.IdentityModel.Tokens.Jwt" version="5.6.0" targetFramework="net461" />
+  <package id="System.Memory" version="4.5.2" targetFramework="net461" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0" targetFramework="net461" />
 </packages>
